<resources>
    <string name="app_name">DynamicVariable</string>
    <string name="toGameStr" />
    <string name="emptyForBut" />
    <string name="emptyBut" />
    <string name="emptyText1" />
    <string name="emptyText2" />
    <string name="emptyText3" />
    <string name="emptyText4" />
    <string name="volumeoff">VolumeOff</string>
    <string name="volumeon">VolumeOn</string>
</resources>
