<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/homewithoutborder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/toGameButton"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="36dp"
        android:background="@android:color/background_dark"
        android:text="@string/emptyForBut"
        app:layout_constraintBottom_toTopOf="@+id/toInstructoionsButtton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/toSettings"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="356dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="652dp"
        android:background="@android:color/holo_purple"
        android:text="@string/emptyForBut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toInstructoionsButtton"
        android:layout_width="161dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/white"
        android:text="@string/toGameStr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/toHighScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/toHighScore"
        android:layout_width="161dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/emptyBut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>